# finance

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESAFIO.md  Dockerfile.backend  Dockerfile.ui  README.md  docker-compose.yml  generate_cpfs.py  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml
docs/: README.md
docs/adr/: ADR-001-arquitetura-geral-de-agentes.md  ADR-002-orquestracao-e-handoff.md  ADR-003-gerenciamento-de-estado.md  ADR-004-rastreabilidade.md  ADR-005-seguranca-e-pii.md  ADR-006-interface-streamlit.md  ADR-007-agente-de-cambio.md  ADR-008-autenticacao-jwt.md  ADR-009-ajustes-de-triage-e-logs.md  ADR-010-cicd-github-actions-oci.md  ADR-011-sistema-de-evaluations.md  ADR-012-handoff-via-ferramentas-e-diretorios.md  ADR-013-ajuste-roteamento-pos-entrevista.md  ADR-014-roteamento-de-continuidade-por-active-agent.md
src/backend/: __init__.py  main.py  test_end.py
src/backend/core/: __init__.py  config.py
src/backend/data/: clientes.csv  score_limite.csv  solicitacoes_aumento_limite.csv
src/evals/: __init__.py  ai_battle.py  auth_helper.py  judge.py  models.py  reporter.py  runner.py  simple_eval.py
src/tests/: conftest.py  test_active_agent_routing.py  test_auth_tool.py  test_credit_flow_after_interview.py  test_credit_limit_persistence.py  test_credit_score_rule.py  test_end_conversation.py  test_evals_structure.py  test_exchange_fallback.py  test_interview_completion_flow.py  test_joao_silva_e2e.py  test_removal_of_transfer_to_triage.py  test_score_formula.py  test_stream_filtering.py
src/ui/: app.py
(+173 files in other folders)
